fixed body misalignment for large screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  max-width: 1440px;
   background-color: #0a0a0a;
   color: aliceblue;
   
